# nova-deepagent

./: .env.example  .gitignore  AGENTS.md  DEMO.md  README.md  graph.py  langgraph.json  main.py  pyproject.toml
.deepagents/: agent.md
evals/: evals.py  experiment.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatInterface.tsx  EmptyState.tsx  LoadingIndicator.tsx  MarkdownContent.tsx  MessageBubble.tsx  MessageInput.tsx  SubAgentCard.tsx  ToolCallCard.tsx
frontend/src/components/charts/: ChartRenderer.tsx  formatters.ts  index.ts  theme.ts
frontend/src/types/: chart.ts
nova/data/: __init__.py
nova/models/: __init__.py  account.py  transaction.py
nova/tools/: __init__.py  accounts.py  enrichment.py  savings.py
src/: __init__.py
src/data/: __init__.py  mock_data.py
src/models/: __init__.py  chart.py
src/tools/: __init__.py  accounts.py  charts.py  enrichment.py  savings.py  spending.py  transactions.py
tests/: __init__.py
