[project]
name = "nova"
version = "0.1.0"
description = "Nova - Personal Financial Assistant DeepAgent"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "pydantic",
    "rich",
    "python-dotenv",
    "langgraph-api",
    "langgraph-cli[inmem]",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
